[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interrobang"
version = "0.1.0"
description = "Build beautiful terminal user interfaces in Python. A pure-stdlib toolkit with an Elm-style runtime and a fluent styling engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "interrobang contributors" }]
keywords = ["tui", "terminal", "cli", "ansi", "elm", "curses", "styling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Terminals",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Quesadius/interrobang"
Documentation = "https://github.com/Quesadius/interrobang/tree/main/docs"
Source = "https://github.com/Quesadius/interrobang"

[tool.hatch.build.targets.wheel]
packages = ["src/interrobang"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["interrobang"]
branch = true
omit = ["*/terminal_io.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
